# docling-graph-tutorial

./: .env.example  .gitignore  00_setup_check.py  Modelfile-qwen3.5-2b  README.md  SETUP.md  graph_utils.py  intro.md  load_prerun.py  pyproject.toml  visualize_graph.py
data/prerun/: earnings_graph.json  home_policy_graph.json
notebooks/: 01_quickstart.ipynb  02_schema.ipynb  03_export.ipynb  04_vlm_path.ipynb
